[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robolake-cli"
version = "0.1.0"
description = "Robotics data processing platform - Convert ROSbag files to analytics-ready formats"
authors = [{name = "Ekai Labs", email = "team@ekai.ai"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["robotics", "rosbag", "data-processing", "apache-iceberg", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "duckdb>=0.8.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
rosbags = ["rosbags>=0.9.0"]
iceberg = ["pyiceberg>=0.4.0"]

[project.scripts]
robolake = "robolake_cli.main:main"

[project.urls]
Homepage = "https://github.com/hussnainahmed/robolake-cli"
Repository = "https://github.com/hussnainahmed/robolake-cli"
Documentation = "https://github.com/hussnainahmed/robolake-cli#readme"
Issues = "https://github.com/hussnainahmed/robolake-cli/issues"
Changelog = "https://github.com/hussnainahmed/robolake-cli/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 